--- a/main/index.html
+++ b/main/index.html
@@ -34,7 +34,7 @@
     <div class="grid-container-home">
 
       <div class="grid-child-one">
-        <h1 id="home-header">Radakka Scholarship Fund</h1>
+        <h1 id="home-header">Radakka Scholarship Funds</h1>
       </div>
 
       <div class="grid-child-two">
@@ -51,7 +51,25 @@
     <div class="grid-container-about"></div>
 
     <div class="grid-child-one">
-      <h2 id="about-header">Welcome to the Radakka Scholarship Fund page.</h2>
+      <h2 id="about-header">Welcome to the Radakka Scholarship Funds page.</h2>
+      <p class="about-paragraph">Radakka Humanitarian Group is a 501 c3 nonprofit Organization located in Elmont NY.
+        Radakka Scholarship funds was founded on August 12, 2023, by members of Radakka
+        humanitarian group. Our organization throughout the years has taken part in various projects
+        such as, community healthcare in NY, shelters visit in NY, constructions of a technical school in
+        Port-au-Prince, school supplies donation for the children of Haiti and much more.
+        This current project “Education for a better Haiti” stems from our belief that in the midst of
+        political and economic instabilities that the country is facing, the children who are the future of
+        Haiti have the right to the proper education. We are inviting you to join us and be a blessing to
+        so many school-aged children in need of a helping hand for a better Haiti.
+        For the school year 2022-2023 with the help of donors we were able to Sponsors 5 children
+        from “Centre D’enseignement Saint Louis de Gonzague de Fonfrède” in the South and “Collège
+        Evangélique Maranatha” in Port-au-Prince. For the school year 2023 - 2024, 9 students were
+        sponsored. Our children are selected based on financial needs and academy success which is
+        demonstrated by maintaining a GPA of 7.0 out of 10 throughout the school year. With your help
+        this year we would love to reach out to many more families struggling to keep their children in
+        schools and off the streets. You can choose to sponsor a student as low as $300 for the year or
+        make a donation of any amount for the year towards sponsoring one (see attached application).
+        Your contribution will cover the entire school year tuition as well as school supplies. Below you can see the images of the children.</p>
     </div>
 
     <div class="grid-child-two">
@@ -127,12 +145,22 @@
   </section>
 
   <section class="donations-page" id="donations-page">
-
+    <h1 id="donations-header"> Donations</h1>
+    <h2 id="donations-second-header">Please zelle your contribution to (631) 466-8670 with the memo “ Scholarship Funds ” or write us a check made out to RADAKKA. For cash contribution please give us a call.</h2>
+    <h2 class="donations-third-header">We appreciate your support</h2>
+    <h2 class="donations-third-header">Thank You</h2>
   </section>
 
   <section class="contact-page" id="contact-page">
-
+    <h1 id="contact-header"> Please contact us for more information. We are located at Holy Innocent RC Church in Brooklyn. Email us anytime with questions or call.</h1>
+    <h2 class="contact-text"> Holy Innocents RC Church | 279 E 17th Street | Brooklyn, NY 11226</h2>
+    <h2 class="contact-text">Phone: (718) 469-9500</h2>
+    <h2 class="contact-text">Cell: (347) 245-0082</h2>
+    <h2 class="contact-text">Email: Radakka4God1994@yahoo.com || Humanitarian@Radakka.org || Social@Radakka.org || Junior@Radakka.org</h2>
   </section>
+  
+
+  <footer> <i class="fas fa-facebook fa-sm"></i> <p>&copy; RADAKKA 2024</p> </footer>
 
    <!-- Other sections -->
 
