--- a/main/index.html
+++ b/main/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="script.js"></script>
   <title>Radakka Scholarship Fund</title>
 </head>
@@ -16,7 +16,7 @@
     <input type="checkbox" id="check">
     <!-- Menu icon -->
     <label for="check" class="checkbtn">
-      <i class="fas fa-bars"></i>
+      <i class="fa fa-bars" aria-hidden="true"></i>
     </label>
     <!-- Site logo -->
     <label class="logo">Radakka</label>
@@ -69,102 +69,114 @@
         this year we would love to reach out to many more families struggling to keep their children in
         schools and off the streets. You can choose to sponsor a student as low as $300 for the year or
         make a donation of any amount for the year towards sponsoring one (see attached application).
-        Your contribution will cover the entire school year tuition as well as school supplies. Below you can see the images of the children.</p>
+        Your contribution will cover the entire school year tuition as well as school supplies. Below you can see the
+        images of the children.</p>
     </div>
 
     <div class="grid-child-two">
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 8</div>
-    <img src="images/childone.jpg" class="about-images">
-    <div class="text">Caption Text 1</div>
-  </div>
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 8</div>
+          <img src="images/childone.jpg" class="about-images">
+          <div class="text">Caption Text 1</div>
+        </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 8</div>
-    <img src="images/childtwo.jpg" class="about-images">
-    <div class="text">Caption Text 2</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 8</div>
+          <img src="images/childtwo.jpg" class="about-images">
+          <div class="text">Caption Text 2</div>
+        </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 8</div>
-    <img src="images/childthree.JPG" class="about-images">
-    <div class="text">Caption Text 3</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 8</div>
+          <img src="images/childthree.JPG" class="about-images">
+          <div class="text">Caption Text 3</div>
+        </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">4 / 8</div>
-    <img src="images/childfour.jpg" class="about-images">
-    <div class="text">Caption Text 4</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">4 / 8</div>
+          <img src="images/childfour.jpg" class="about-images">
+          <div class="text">Caption Text 4</div>
+        </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">5 / 8</div>
-    <img src="images/childfive.jpg" class="about-images">
-    <div class="text">Caption Text 5</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">5 / 8</div>
+          <img src="images/childfive.jpg" class="about-images">
+          <div class="text">Caption Text 5</div>
+        </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">6 / 8</div>
-    <img src="images/childsix.jpg" class="about-images">
-    <div class="text">Caption Text 6</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">6 / 8</div>
+          <img src="images/childsix.jpg" class="about-images">
+          <div class="text">Caption Text 6</div>
+        </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">7 / 8</div>
-    <img src="images/childseven.jpg" class="about-images">
-    <div class="text">Caption Text 7</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">7 / 8</div>
+          <img src="images/childseven.jpg" class="about-images">
+          <div class="text">Caption Text 7</div>
+        </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">8 / 8</div>
-    <img src="images/childeight.jpg" class="about-images">
-    <div class="text">Caption Text 8</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">8 / 8</div>
+          <img src="images/childeight.jpg" class="about-images">
+          <div class="text">Caption Text 8</div>
+        </div>
 
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
 
-<!-- Dots for slide navigation -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-  <span class="dot" onclick="currentSlide(5)"></span>
-  <span class="dot" onclick="currentSlide(6)"></span>
-  <span class="dot" onclick="currentSlide(7)"></span>
-  <span class="dot" onclick="currentSlide(8)"></span>
-</div>
+      <!-- Dots for slide navigation -->
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
+        <span class="dot" onclick="currentSlide(7)"></span>
+        <span class="dot" onclick="currentSlide(8)"></span>
+      </div>
 
-      
+
 
   </section>
 
   <section class="donations-page" id="donations-page">
     <h1 id="donations-header"> Donations</h1>
-    <h2 id="donations-second-header">Please zelle your contribution to (631) 466-8670 with the memo “ Scholarship Funds ” or write us a check made out to RADAKKA. For cash contribution please give us a call.</h2>
+    <h2 id="donations-second-header">Please zelle your contribution to (631) 466-8670 with the memo “ Scholarship Funds
+      ” or write us a check made out to RADAKKA. For cash contribution please give us a call.</h2>
     <h2 class="donations-third-header">We appreciate your support</h2>
     <h2 class="donations-third-header">Thank You</h2>
   </section>
 
   <section class="contact-page" id="contact-page">
-    <h1 id="contact-header"> Please contact us for more information. We are located at Holy Innocent RC Church in Brooklyn. Email us anytime with questions or call.</h1>
+    <h1 id="contact-header"> Please contact us for more information. We are located at Holy Innocent RC Church in
+      Brooklyn. Email us anytime with questions or call.</h1>
     <h2 class="contact-text"> Holy Innocents RC Church | 279 E 17th Street | Brooklyn, NY 11226</h2>
     <h2 class="contact-text">Phone: (718) 469-9500</h2>
     <h2 class="contact-text">Cell: (347) 245-0082</h2>
-    <h2 class="contact-text">Email: Radakka4God1994@yahoo.com || Humanitarian@Radakka.org || Social@Radakka.org || Junior@Radakka.org</h2>
+    <h2 class="contact-text">Email: Radakka4God1994@yahoo.com || Humanitarian@Radakka.org || Social@Radakka.org ||
+      Junior@Radakka.org</h2>
   </section>
-  
 
-  <footer> <i class="fas fa-facebook fa-sm"></i> <p>&copy; RADAKKA 2024</p> </footer>
 
-   <!-- Other sections -->
+  <footer>
+    <p id="footer-head">Follow us:</p>
+    <div class="footer-links">
+      <a href="https://www.facebook.com/radakka.radakka.9" target="_blank" class="btn-footer"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+      <a href="mailto:Radakka4God1994@yahoo.com" target="_blank" class="btn-footer"><i class="fa fa-envelope-square" aria-hidden="true"></i></a>
 
-   <script>
+    </div>
+    <p id="footer-text">&copy; 2024 RADAKKA.  All rights reserved</p>
+  </footer>
+
+  <!-- Other sections -->
+
+  <script>
     // JavaScript to close mobile navbar after clicking a link
     const navLinks = document.querySelectorAll("nav ul li a");
     const checkBox = document.getElementById("check");
