--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="mySlides fade">
           <div class="numbertext">7 / 8</div>
-          <img src="images/childseven.jpg" class="about-images">
+          <img src="images/childseven.JPG" class="about-images">
           <div class="text">Caption Text 7</div>
         </div>
 
