--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
     <h2 class="contact-text"> Holy Innocents RC Church | 279 E 17th Street | Brooklyn, NY 11226</h2>
     <h2 class="contact-text">Phone: (718) 469-9500</h2>
     <h2 class="contact-text">Cell: (347) 245-0082</h2>
-    <h2 class="contact-text">Email: Radakka4God1994@yahoo.com || Humanitarian@Radakka.org || Social@Radakka.org ||
-      Junior@Radakka.org</h2>
+    <h2 class="contact-text">Email:Radakkascholarshipfunds@gmail.com || Humanitarian@Radakka.org </h2> 
   </section>
 
 
@@ -168,7 +167,7 @@
     <p id="footer-head">Follow us:</p>
     <div class="footer-links">
       <a href="https://www.facebook.com/radakka.radakka.9" target="_blank" class="btn-footer"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-      <a href="mailto:Radakka4God1994@yahoo.com" target="_blank" class="btn-footer"><i class="fa fa-envelope-square" aria-hidden="true"></i></a>
+      <a href="mailto:Radakkascholarshipfunds@gmail.com" target="_blank" class="btn-footer"><i class="fa fa-envelope-square" aria-hidden="true"></i></a>
 
     </div>
     <p id="footer-text">&copy; 2024 RADAKKA.  All rights reserved</p>
