--- a/index.html
+++ b/index.html
@@ -77,52 +77,63 @@
       <!-- Slideshow container -->
       <div class="slideshow-container">
         <div class="mySlides fade">
-          <div class="numbertext">1 / 8</div>
+          <div class="numbertext">1 / 9</div>
           <img src="images/childone.jpg" class="about-images">
           <div class="text">Caption Text 1</div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">2 / 8</div>
+          <div class="numbertext">2 / 9</div>
           <img src="images/childtwo.jpg" class="about-images">
           <div class="text">Caption Text 2</div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">3 / 8</div>
+          <div class="numbertext">3 / 9</div>
           <img src="images/childthree.JPG" class="about-images">
           <div class="text">Caption Text 3</div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">4 / 8</div>
+          <div class="numbertext">4 / 9</div>
           <img src="images/childfour.jpg" class="about-images">
           <div class="text">Caption Text 4</div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">5 / 8</div>
+          <div class="numbertext">5 / 9</div>
           <img src="images/childfive.jpg" class="about-images">
           <div class="text">Caption Text 5</div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">6 / 8</div>
+          <div class="numbertext">6 / 9</div>
           <img src="images/childsix.jpg" class="about-images">
           <div class="text">Caption Text 6</div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">7 / 8</div>
+          <div class="numbertext">7 / 9</div>
           <img src="images/childseven.JPG" class="about-images">
           <div class="text">Caption Text 7</div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">8 / 8</div>
+          <div class="numbertext">8 / 9</div>
           <img src="images/childeight.jpg" class="about-images">
           <div class="text">Caption Text 8</div>
         </div>
+
+        <!-- Slide 9 (Video) -->
+        <div class="mySlides fade">
+          <div class="numbertext">9 / 9</div>
+          <video class="about-video" controls>
+            <source src="videos/whatsappvid.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+          <div class="text">Caption Text 2 (Video)</div>
+        </div>
+
 
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -139,6 +150,7 @@
         <span class="dot" onclick="currentSlide(6)"></span>
         <span class="dot" onclick="currentSlide(7)"></span>
         <span class="dot" onclick="currentSlide(8)"></span>
+        <span class="dot" onclick="currentSlide(9)"></span>
       </div>
 
 
@@ -159,18 +171,20 @@
     <h2 class="contact-text"> Holy Innocents RC Church | 279 E 17th Street | Brooklyn, NY 11226</h2>
     <h2 class="contact-text">Phone: (718) 469-9500</h2>
     <h2 class="contact-text">Cell: (347) 245-0082</h2>
-    <h2 class="contact-text">Email:Radakkascholarshipfunds@gmail.com || Humanitarian@Radakka.org </h2> 
+    <h2 class="contact-text">Email:Radakkascholarshipfunds@gmail.com || Humanitarian@Radakka.org </h2>
   </section>
 
 
   <footer>
     <p id="footer-head">Follow us:</p>
     <div class="footer-links">
-      <a href="https://www.facebook.com/radakka.radakka.9" target="_blank" class="btn-footer"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-      <a href="mailto:Radakkascholarshipfunds@gmail.com" target="_blank" class="btn-footer"><i class="fa fa-envelope-square" aria-hidden="true"></i></a>
+      <a href="https://www.facebook.com/radakka.radakka.9" target="_blank" class="btn-footer"><i
+          class="fa fa-facebook-square" aria-hidden="true"></i></a>
+      <a href="mailto:Radakkascholarshipfunds@gmail.com" target="_blank" class="btn-footer"><i
+          class="fa fa-envelope-square" aria-hidden="true"></i></a>
 
     </div>
-    <p id="footer-text">&copy; 2024 RADAKKA.  All rights reserved</p>
+    <p id="footer-text">&copy; 2024 RADAKKA. All rights reserved</p>
   </footer>
 
   <!-- Other sections -->
